--- a/containers/ProductItemContainer/productitemcontainer.module.css
+++ b/containers/ProductItemContainer/productitemcontainer.module.css
@@ -1,7 +1,32 @@
-.prod_item_container {min-height: calc(100vh - 120px); padding: 50px 0}
-.slider_container {display: flex; align-items: center;}
+.prod_item_container {
+  min-height: calc(100vh - 120px);
+  padding: 80px 0;
+  gap: 60px;
+  align-items: flex-start;
+}
+
+.slider_container {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+@media screen and (max-width: 1200px) {
+  .prod_item_container {
+    gap: 40px;
+    padding: 60px 0;
+  }
+}
 
 @media screen and (max-width: 768px) {
-  .prod_item_container {height: fit-content; padding-bottom: 80px;}
+  .prod_item_container {
+    height: fit-content;
+    padding: 40px 0 80px;
+    gap: 30px;
+  }
+  
+  .slider_container {
+    order: 1;
+  }
 }
     
