--- a/containers/CardFeatureContainer/cardFeatureContainer.module.css
+++ b/containers/CardFeatureContainer/cardFeatureContainer.module.css
@@ -1,18 +1,24 @@
 .cardsFeatureContainer{
-    position: absolute;
-    top: -145px;
+    position: relative;
+    top: 0;
     left: 0;
     right: 0;
-    grid-auto-rows: 272px;
+    grid-auto-rows: 320px;
     z-index: 2;
+    margin-bottom: 60px;
+}
+
+@media screen and (max-width: 1200px) {
+    .cardsFeatureContainer{
+      grid-auto-rows: 280px;
+    } 
 }
 
 @media screen and (max-width: 768px) {
     .cardsFeatureContainer{
       column-gap: 10px !important;
       row-gap: 15px !important;
-      grid-auto-rows: 100px;
-      top: 0;
-      position: relative;
+      grid-auto-rows: 200px;
+      margin-bottom: 40px;
     } 
 }
